nav bar overflow fixed

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -26,7 +26,7 @@
   display: block;
   overflow-y: scroll;
   text-align: left;
-  height: 54vh;
+  height: 48vh;
 }
 
 .article-link {
